--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -19,16 +19,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Debug Secrets
-        run: |
-          echo "SONAR_PROJECT_KEY=${{ secrets.SONAR_PROJECT_KEY }}"
-          echo "SONAR_ORGANIZATION=${{ secrets.SONAR_ORGANIZATION }}"
-          echo "SONAR_TOKEN is set"
-        env:
-          SONAR_PROJECT_KEY: ${{ secrets.SONAR_PROJECT_KEY }}
-          SONAR_ORGANIZATION: ${{ secrets.SONAR_ORGANIZATION }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
       - name: Analyze with SonarCloud
         uses: SonarSource/sonarcloud-github-action@v2.2.0
         env:
@@ -37,4 +27,6 @@ jobs:
           args: |
             -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
             -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+            -Dsonar.exclusions=**/*.dto.ts,**/*.guard.ts
+            -Dsonar.test.exclusions=**/*.dto.ts,**/*.guard.ts
           projectBaseDir: .
