--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "nest start",
     "start:auth": "nest start auth",
     "start:app": "nest start app",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:coverage" : "jest --coverage"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -64,27 +66,34 @@
     "typescript": "~5.3.0"
   },
   "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": ".",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "./coverage",
-    "testEnvironment": "node",
-    "roots": [
-      "<rootDir>/libs/",
-      "<rootDir>/apps/"
-    ],
-    "moduleNameMapper": {
-      "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
-    }
+  "moduleFileExtensions": [
+    "js",
+    "json",
+    "ts"
+  ],
+  "rootDir": ".",
+  "testRegex": ".*\\.spec\\.ts$",
+  "transform": {
+    "^.+\\.(t|j)s$": "ts-jest"
+  },
+  "collectCoverageFrom": [
+    "**/*.(t|j)s"
+  ],
+  "coveragePathIgnorePatterns": [
+    ".*\\.dto\\.ts$", 
+    ".*\\.guard\\.ts$", 
+    ".*\\.e2e-spec\\.ts$", 
+    "app\\.e2e-spec\\.ts$",
+    ".*\\.decorators\\.ts$"
+  ],
+  "coverageDirectory": "./coverage",
+  "testEnvironment": "node",
+  "roots": [
+    "<rootDir>/libs/",
+    "<rootDir>/apps/"
+  ],
+  "moduleNameMapper": {
+    "^@app/common(|/.*)$": "<rootDir>/libs/common/src/$1"
   }
+}
 }
